--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TeamStation Role Definition Generator</title>
+    <title>TeamStation Software Engineering Role Definitions</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -93,7 +93,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>TeamStation Role Definition Generator</h1>
+        <h1>TeamStation Software Engineering Role Definitions</h1>
         <label for="role">Select a Role:</label>
         <select id="role" onchange="generateDefinition()">
             <option value="">-- Select a Role --</option>
