--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
             },
             "qa": {
                 definition: "QA Automation Engineers develop and maintain automated tests to ensure software quality and reliability.",
-                technologies: ["Selenium", "JUnit", "TestNG", "CI/CD (Jenkins, GitLab CI, Azure DevOps, CircleCI)", "Scripting Languages (Python, JavaScript, Groovy)", "Robot Framework", "Cypress", "TestCafe", "Jest", "Mocha", "Chai", "Cucumber (BDD)", "API Testing (REST-assured, Postman, Karate DSL)", "Performance Testing (JMeter, Gatling, LoadView)", "Mobile Testing (Appium)", "Database Testing", "Security Testing (OWASP ZAP, Burp Suite)", "Code Coverage (JaCoCo, SonarQube)", "Test Management Tools (TestRail, Zephyr)", "Service Virtualization","C#", ".NET", "Microsoft Visual Studio", "Azure DevOps", "Microsoft Test Manager", "Selenium", "CodeceptJS", "Puppeteer", "Datadog", "PlayWright"]
+                technologies: ["Selenium", "JUnit", "TestNG", "CI/CD (Jenkins, GitLab CI, Azure DevOps, CircleCI)", "Scripting Languages (Python, JavaScript, Groovy)", "Robot Framework", "Cypress", "TestCafe", "Jest", "Mocha", "Chai", "Cucumber (BDD)", "API Testing (REST-assured, Postman, Karate DSL)", "Performance Testing (JMeter, Gatling, LoadView)", "Mobile Testing (Appium)", "Database Testing", "Security Testing (OWASP ZAP, Burp Suite)", "Code Coverage (JaCoCo, SonarQube)", "Test Management Tools (TestRail, Zephyr)", "Service Virtualization","C#", ".NET", "Microsoft Visual Studio", "Azure DevOps", "Microsoft Test Manager", "CodeceptJS", "Puppeteer", "Datadog", "PlayWright"]
             },
             "qalead": {
                 definition: "QA Leads manage QA teams, define testing strategies, and ensure software meets quality standards.",
